src/app/shared/components/app-sidebar/app-sidebar.component.scss
:host {
    display: block;
}

.sidebar {
    display: flex;
    flex-direction: column;
    height: 100%;
    padding: var(--p-card-body-padding, 1rem);
    border-right: 1px solid var(--p-content-border-color);
    background: var(--p-surface-card);
}

.sidebar-top {
    display: flex;
    flex-direction: column;
}

.brand {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-bottom: 1rem;
    color: var(--p-primary-color);
    font-weight: 600;
}

.menu-navigation-items {
    margin-top: auto;
}

